--- a/mand.html
+++ b/mand.html
@@ -1,4 +1,6 @@
-<DOCTYPE HTML>
+<!DOCTYPE HTML>
+
+<html>
   <head>
     <title> mand </title>
   </head>
@@ -6,3 +8,4 @@
   <body>
     <p> asdf </p>
   </body>
+</html>
